# CCP

./: CCP.cpp  CCP.h  CCP.kdev4  CMakeLists.txt  CMakeLists.txt~  ProfillingResults.txt  ccp.xmi  main.cpp
.kdev4/: CCP.kdev4
CCP/: Distance.cpp  Instance.cpp  Instance.h  Point.cpp  Point.h  Position.cpp  Solution.cpp  Solution.h
instances/: CCPRead  instance1.txt
instances/AES/: Alegrete.dat.out  Cacapava_10.dat.out  Lajeado.dat.out  Santa_Maria.dat.out
instances/Results/: Results.ods  Results.xls  SJC1_CCP_2010-02-28.txt  SJC1_CCP_2010-04-16.txt  SJC2_CCP_2010-02-28.txt  SJC2_CCP_2010-04-16.txt  SJC3a_CCP_2010-02-28.txt  SJC3a_CCP_2010-04-16.txt  SJC3b_CCP_2010-02-28.txt  SJC3b_CCP_2010-04-16.txt  SJC4a_CCP_2010-02-28.txt  SJC4a_CCP_2010-04-16.txt  SJC4b_CCP_2010-02-28.txt  SJC4b_CCP_2010-04-16.txt  SJC5_CCP_2010-04-16.txt  p3038_600_2010_04_19.txt
src/: CMakeLists.txt  Position.h  aclass.cpp  aclass.h  main.cpp  mainwindow.ui
src/ gui/: RunBatch.cpp
src/CCPIORocsPlugin/: CMakeLists.txt  DATFilePlugin.cpp  DATFilePlugin.h  datfileplugin.desktop
src/TCCRocsPlugin/: CMakeLists.txt  TCCrun.cpp  TCCrun.desktop  TCCrun.h
src/algorithms/: CMakeLists.txt  HMeansCluster.cpp  HMeansCluster.h  HMeansWithDensity.cpp  HMeansWithDensity.h  JMeansCluster.cpp  JMeansCluster.h  JMeansWithDensity.cpp  JMeansWithDensity.h  RandonDensityCluster.cpp  RandonDensityCluster.h  algorithmstruct.cpp  algorithmstruct.h  densitycluster.cpp  densitycluster.h  farthestcluster.cpp  farthestcluster.h
src/gui/: CMakeLists.txt  FileBatch.cpp  FileBatch.h  HistoryChanger.cpp  HistoryChanger.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  RunBatch.cpp  RunBatch.h  RunBatch.ui  RunData.cpp  RunData.h  RunData.ui  SolutionPool.cpp  SolutionPool.h  viewcluster.cpp  viewcluster.h
src/io/: CMakeLists.txt  readccp.cpp  readccp.h
src/model/: CMakeLists.txt  CMakeLists.txt~  Cluster.cpp  Cluster.h  Distance.cpp  Distance.h  Distance.h~  History.cpp  History.h  Instance.cpp  Instance.h  Instance.h~  InstanceInfo.cpp  InstanceInfo.h  Point.cpp  Point.h  Position.cpp  Position.h  Solution.cpp  Solution.h  SolutionImprovement.cpp  SolutionImprovement.h  SolutionRunner.cpp  SolutionRunner.h  model_global.h
tests/: CCPCluster_Test.cpp  CCPCluster_Test.h  CCPDistance.cpp  CCPDistance.h  CCPHistory.cpp  CCPHistory.h  CCPRead.cpp  CCPRead.h  CCPSolution.cpp  CCPSolution.h  CCPSolutionImprovement_Test.cpp  CCPSolutionImprovement_Test.h  CCPTest.cpp  CCPTest.h  CMakeLists.txt  ccpmodel_test.cpp  ccpmodel_test.h
